# pytorch-lightning-sam-callback

./: .pre-commit-config.yaml  LICENSE  README.md  commitlint.config.js  pyproject.toml  renovate.json  setup.cfg
.github/workflows/: ci-testing.yml  publish.yml  release-drafter.yml
examples/: boring_mode.py  cifar10.py
logs/: sam_metrics.csv  vanilla_metrics.csv
pytorch_lightning_sam_callback/: __init__.py  sam.py
scripts/: gen_training_chart.py
tests/: test_sam.py
